Updated NetisHR files

--- a/netishr/administrator_remuneration_payassignment.html
+++ b/netishr/administrator_remuneration_payassignment.html
@@ -39,7 +39,7 @@
 
 <body>
     <div id="wrapper">
-                        <nav class="navbar-default navbar-static-side" role="navigation">
+        <nav class="navbar-default navbar-static-side" role="navigation">
             <div class="sidebar-collapse">
                 <ul class="nav metismenu" id="side-menu">
                     <li class="nav-header">
@@ -409,7 +409,8 @@
 
                                         <div class="panel-body">
                                             <div class="col-sm-9">
-                                                <a href="administrator_remuneration_payassignment_new.html" class="btn-primary btn-xs">Make new assignment</a>
+                                                <a href="administrator_remuneration_payassignment_new.html" class="btn btn-primary btn-xs">Make new assignment</a>
+                                                <button type="button" class="btn btn-primary btn-xs">Export assignment</button>
                                             </div>
                                             <div class="col-sm-3">
                                                 <div class="form-group" id="monthpicker">
