--- a/netishr/administrator_remuneration_paysets.html
+++ b/netishr/administrator_remuneration_paysets.html
@@ -37,7 +37,7 @@
 
 <body>
     <div id="wrapper">
-                        <nav class="navbar-default navbar-static-side" role="navigation">
+        <nav class="navbar-default navbar-static-side" role="navigation">
             <div class="sidebar-collapse">
                 <ul class="nav metismenu" id="side-menu">
                     <li class="nav-header">
@@ -408,6 +408,7 @@
 
 
                                                 <a href="administrator_remuneration_paysets_new.html" class="btn btn-primary btn-xs">New pay set</a>
+                                                <button type="button" class="btn btn-primary btn-xs">Export paysets</button>
 
                                                 <div class="row">
                                                     <div class="col-sm-12">
@@ -483,6 +484,8 @@
                                         </div>
                                         <div id="tab-2" class="tab-pane active">
                                             <div class="panel-body">
+
+                                                <button type="button" class="btn btn-primary btn-xs">Export paysets</button>
 
                                                 <div class="row">
                                                     <div class="col-sm-12">
