--- a/netishr/administrator_remuneration_payslips.html
+++ b/netishr/administrator_remuneration_payslips.html
@@ -37,7 +37,7 @@
 
 <body>
     <div id="wrapper">
-                        <nav class="navbar-default navbar-static-side" role="navigation">
+        <nav class="navbar-default navbar-static-side" role="navigation">
             <div class="sidebar-collapse">
                 <ul class="nav metismenu" id="side-menu">
                     <li class="nav-header">
@@ -411,6 +411,7 @@
 
 
                                                 <a href="administrator_remuneration_payslips_new.html" class="btn btn-primary btn-xs">New payslip</a>
+                                                <button type="button" class="btn btn-primary btn-xs">Export payslips</button>
 
                                                 <div class="row">
                                                     <div class="col-sm-12">
@@ -485,6 +486,8 @@
                                         </div>
                                         <div id="tab-2" class="tab-pane">
                                             <div class="panel-body">
+
+                                                <button type="button" class="btn btn-primary btn-xs">Export payslips</button>
 
                                                 <div class="row">
                                                     <div class="col-sm-12">
