--- a/netishr/career_talentpool.html
+++ b/netishr/career_talentpool.html
@@ -458,6 +458,28 @@
                                         </div>
 
 
+
+                                        Talent Development Program:
+
+                                        <button type="button" class="btn btn-primary btn-xs" data-toggle="modal" data-target="#submit">Submit</button>
+                                        <div class="modal inmodal" id="submit" tabindex="-1" role="dialog" aria-hidden="true">
+                                            <div class="modal-dialog">
+                                                <div class="modal-content animated">
+                                                    <div class="modal-header">
+                                                        <button type="button" class="close" data-dismiss="modal"><span aria-hidden="true">&times;</span><span class="sr-only">Close</span></button>
+                                                        <h4 class="modal-title">Confirmation</h4>
+                                                    </div>
+                                                    <div class="modal-body">Are you sure to submit selection person(s) to Talent Development Program?
+                                                    </div>
+                                                    <div class="modal-footer">
+                                                        <button type="button" class="btn btn-white" data-dismiss="modal">Cancel</button>
+                                                        <button type="button" class="btn btn-primary">Submit</button>
+                                                    </div>
+                                                </div>
+                                            </div>
+                                        </div>
+
+
                                     </div>
                                 </div>
                                 <div class="clients-list">
@@ -471,17 +493,18 @@
                                                         <th>
                                                         </th>
                                                         <th>
-                                                            NIP
+                                                            ID
                                                         </th>
                                                         <th>
                                                             Name
                                                         </th>
                                                         <th>
-                                                            Organization Unit
+                                                            Unit
                                                         </th>
                                                         <th>
                                                             Job Title
                                                         </th>
+                                                        <th></th>
                                                     </thead>
                                                     <tbody>
                                                         <tr>
@@ -490,6 +513,12 @@
                                                             <td><a data-toggle="tab" href="#contact-1" class="client-link">Tono Kartono</a></td>
                                                             <td> IT Team</td>
                                                             <td> IT Developer</td>
+                                                            <td>
+                                                                <div class="i-checks">
+                                                                    <label>
+                                                                        <input type="checkbox" value=""> <i></i></label>
+                                                                </div>
+                                                            </td>
                                                         </tr>
                                                         <tr>
                                                             <td class="client-avatar"><img alt="image" src="img/a3.jpg"> </td>
@@ -497,34 +526,65 @@
                                                             <td><a data-toggle="tab" href="#contact-2" class="client-link">Tini Kartini</a></td>
                                                             <td> Marketing Communication</td>
                                                             <td> Staff</td>
-                                                            <tr>
-                                                                <td class="client-avatar"><img alt="image" src="img/a2.jpg"> </td>
-                                                                <td> 10033 </td>
-                                                                <td><a data-toggle="tab" href="#contact-1" class="client-link">Tono Kartono</a></td>
-                                                                <td> IT Team</td>
-                                                                <td> IT Developer</td>
-                                                            </tr>
-                                                            <tr>
-                                                                <td class="client-avatar"><img alt="image" src="img/a3.jpg"> </td>
-                                                                <td> 10022 </td>
-                                                                <td><a data-toggle="tab" href="#contact-1" class="client-link">Tini Kartini</a></td>
-                                                                <td> Marketing Communication</td>
-                                                                <td> Staff</td>
-                                                            </tr>
-                                                            <tr>
-                                                                <td class="client-avatar"><img alt="image" src="img/a2.jpg"> </td>
-                                                                <td> 10033 </td>
-                                                                <td><a data-toggle="tab" href="#contact-1" class="client-link">Tono Kartono</a></td>
-                                                                <td> IT Team</td>
-                                                                <td> IT Developer</td>
-                                                            </tr>
-                                                            <tr>
-                                                                <td class="client-avatar"><img alt="image" src="img/a3.jpg"> </td>
-                                                                <td> 10022 </td>
-                                                                <td><a data-toggle="tab" href="#contact-1" class="client-link">Tini Kartini</a></td>
-                                                                <td> Marketing Communication</td>
-                                                                <td> Staff</td>
-                                                            </tr>
+                                                            <td>
+                                                                <div class="i-checks">
+                                                                    <label>
+                                                                        <input type="checkbox" value="" checked=""> <i></i></label>
+                                                                </div>
+                                                            </td>
+                                                        </tr>
+                                                        <tr>
+                                                            <td class="client-avatar"><img alt="image" src="img/a2.jpg"> </td>
+                                                            <td> 10033 </td>
+                                                            <td><a data-toggle="tab" href="#contact-1" class="client-link">Tono Kartono</a></td>
+                                                            <td> IT Team</td>
+                                                            <td> IT Developer</td>
+                                                            <td>
+                                                                <div class="i-checks">
+                                                                    <label>
+                                                                        <input type="checkbox" value=""> <i></i></label>
+                                                                </div>
+                                                            </td>
+                                                        </tr>
+                                                        <tr>
+                                                            <td class="client-avatar"><img alt="image" src="img/a3.jpg"> </td>
+                                                            <td> 10022 </td>
+                                                            <td><a data-toggle="tab" href="#contact-1" class="client-link">Tini Kartini</a></td>
+                                                            <td> Marketing Communication</td>
+                                                            <td> Staff</td>
+                                                            <td>
+                                                                <div class="i-checks">
+                                                                    <label>
+                                                                        <input type="checkbox" value=""> <i></i></label>
+                                                                </div>
+                                                            </td>
+                                                        </tr>
+                                                        <tr>
+                                                            <td class="client-avatar"><img alt="image" src="img/a2.jpg"> </td>
+                                                            <td> 10033 </td>
+                                                            <td><a data-toggle="tab" href="#contact-1" class="client-link">Tono Kartono</a></td>
+                                                            <td> IT Team</td>
+                                                            <td> IT Developer</td>
+                                                            <td>
+                                                                <div class="i-checks">
+                                                                    <label>
+                                                                        <input type="checkbox" value=""> <i></i></label>
+                                                                </div>
+                                                            </td>
+                                                        </tr>
+                                                        <tr>
+                                                            <td class="client-avatar"><img alt="image" src="img/a3.jpg"> </td>
+                                                            <td> 10022 </td>
+                                                            <td><a data-toggle="tab" href="#contact-1" class="client-link">Tini Kartini</a></td>
+                                                            <td> Marketing Communication</td>
+                                                            <td> Staff</td>
+                                                            <td>
+                                                                <div class="i-checks">
+                                                                    <label>
+                                                                        <input type="checkbox" value=""> <i></i></label>
+                                                                </div>
+                                                            </td>
+                                                        </tr>
                                                     </tbody>
                                                 </table>
                                             </div>
