--- a/netishr/job_roles.html
+++ b/netishr/job_roles.html
@@ -27,7 +27,7 @@
 
 <body>
     <div id="wrapper">
-                        <nav class="navbar-default navbar-static-side" role="navigation">
+        <nav class="navbar-default navbar-static-side" role="navigation">
             <div class="sidebar-collapse">
                 <ul class="nav metismenu" id="side-menu">
                     <li class="nav-header">
@@ -416,7 +416,7 @@
                                         <div class="ibox">
                                             <div class="ibox-content">
 
-                                                <button type="button" class="btn btn-primary btn-xs" data-toggle="modal" data-target="#newjobrole">New Job Role</button>
+                                                <button type="button" class="btn btn-primary btn-xs" data-toggle="modal" data-target="#newjobrole">New job role</button>
                                                 <div class="modal" id="newjobrole">
                                                     <div class="modal-dialog">
                                                         <div class="modal-content animated">
@@ -456,6 +456,7 @@
                                                     </div>
                                                 </div>
 
+                                                <button type="button" class="btn btn-primary btn-xs">Export job roles</button>
 
                                                 <table class="footable table table-stripped toggle-arrow-tiny" data-page-size="15">
                                                     <thead>
@@ -576,7 +577,7 @@
                                             <div class="ibox-content">
 
 
-                                                <button type="button" class="btn btn-primary btn-xs" data-toggle="modal" data-target="#newjobroleband">New Job Role Band</button>
+                                                <button type="button" class="btn btn-primary btn-xs" data-toggle="modal" data-target="#newjobroleband">New job role band</button>
                                                 <div class="modal" id="newjobroleband">
                                                     <div class="modal-dialog">
                                                         <div class="modal-content animated">
@@ -637,6 +638,7 @@
                                                     </div>
                                                 </div>
 
+                                                <button type="button" class="btn btn-primary btn-xs">Export job role bands</button>
 
 
                                                 <table class="footable table table-stripped toggle-arrow-tiny" data-page-size="15">
