--- a/netishr/job_clans.html
+++ b/netishr/job_clans.html
@@ -27,7 +27,7 @@
 
     <div id="wrapper">
 
-                        <nav class="navbar-default navbar-static-side" role="navigation">
+        <nav class="navbar-default navbar-static-side" role="navigation">
             <div class="sidebar-collapse">
                 <ul class="nav metismenu" id="side-menu">
                     <li class="nav-header">
@@ -456,6 +456,7 @@
                                                     </div>
                                                 </div>
 
+                                                <button type="button" class="btn btn-primary btn-xs">Export job clans</button>
 
                                                 <table class="footable table table-stripped toggle-arrow-tiny" data-page-size="15">
                                                     <thead>
@@ -629,7 +630,7 @@
                                                     </div>
                                                 </div>
 
-
+                                                <button type="button" class="btn btn-primary btn-xs">Export job families</button>
 
                                                 <table class="footable table table-stripped toggle-arrow-tiny" data-page-size="15">
                                                     <thead>
