--- a/netishr/job_titles.html
+++ b/netishr/job_titles.html
@@ -19,7 +19,7 @@
 
 <body>
     <div id="wrapper">
-                        <nav class="navbar-default navbar-static-side" role="navigation">
+        <nav class="navbar-default navbar-static-side" role="navigation">
             <div class="sidebar-collapse">
                 <ul class="nav metismenu" id="side-menu">
                     <li class="nav-header">
@@ -390,6 +390,8 @@
                             <div class="panel-body">
 
                                 <button type="button" class="btn btn-primary btn-xs" data-toggle="modal" data-target="#newjobrole">New Job Title</button>
+                                <button type="button" class="btn btn-primary btn-xs">Export job titles</button>
+
                                 <div class="modal" id="newjobrole">
                                     <div class="modal-dialog">
                                         <div class="modal-content animated">
@@ -690,6 +692,7 @@
                         </div>
                         <div id="nonactive_job" class="tab-pane">
                             <div class="panel-body">
+                                <button type="button" class="btn btn-primary btn-xs">Export job titles</button>
                             </div>
                         </div>
                     </div>
