--- a/netishr/persons_applicants.html
+++ b/netishr/persons_applicants.html
@@ -25,7 +25,7 @@
 
     <div id="wrapper">
 
-                <nav class="navbar-default navbar-static-side" role="navigation">
+        <nav class="navbar-default navbar-static-side" role="navigation">
             <div class="sidebar-collapse">
                 <ul class="nav metismenu" id="side-menu">
                     <li class="nav-header">
@@ -391,6 +391,7 @@
                                 <a href="persons_applicants_profile.html">
                                     <button type="button" class="btn btn-primary btn-xs">New applicant</button>
                                 </a>
+                                <button type="button" class="btn btn-primary btn-xs">Export applicants</button>
                                 <div class="clients-list">
                                     <ul class="nav nav-tabs">
                                         <span class="pull-right small text-muted">16 persons</span>
