Updated NetisHR files

--- a/netishr/mycalendar.html
+++ b/netishr/mycalendar.html
@@ -427,7 +427,7 @@
                                 <div class="pull-right">
 
                                     Apply:
-                                    <button type="button" class="btn btn-primary btn-xs" data-toggle="modal" data-target="#applyleave">Leave</button>
+                                    <a href="remuneration_leave.html"><button type="button" class="btn btn-primary btn-xs">Leave</button></a>
                                                 <div class="modal inmodal" id="applyleave" tabindex="-1" role="dialog" aria-hidden="true">
                                                     <div class="modal-dialog">
                                                         <div class="modal-content animated bounceInRight">
