--- a/netishr/remuneration_leave.html
+++ b/netishr/remuneration_leave.html
@@ -421,14 +421,23 @@
                             </div>
                             <div class="row">
                                 <div class="form-group">
-
-                                    <div class="col-sm-12">
-                                        <label class="control-label pull-left">Developer Notes: akan ada informasi tambahan tergantung tipe cuti yang dipilih apa
-                                            <br> Annual leave : sisa cuti, hutang cuti, dsb Unpaid Leave : sub pilihan Unpaid leave Special Leave : sub pilihan special leave Overtime Leave : sisa cuti overtime
-                                        </label>
+                                    <div class="col-sm-2">
+                                        <label class="control-label pull-left"></label>
+                                    </div>
+                                    <div class="col-sm-10">
+                                        <label class="control-label pull-left">Remaining: [(5) (Valid Until 30-06-2016)] [(12) (Valid Until 30-06-2017)] </label>
                                     </div>
                                 </div>
-
+                            </div>
+                            <div class="row">
+                                    <div class="col-sm-2">
+                                        <label class="control-label pull-left"></label>
+                                    </div>
+                                <div class="form-group">
+                                    <div class="col-sm-10">
+                                        <label class="control-label pull-left">Remaining Debt: 12 </label>
+                                    </div>
+                                </div>
                             </div>
                             <div class="row">
                                 <div class="form-group">
