Updated NetisHR files

--- a/netishr/competency_dictionary.html
+++ b/netishr/competency_dictionary.html
@@ -397,7 +397,16 @@
 
                         <div class="tabs-container">
                             <div class="ibox">
-                                <div class="ibox-content"><a href="competency_dictionary_new.html" class="btn-primary btn-xs">New Competency</a></div>
+                                <div class="ibox-content">
+                                    <div class="row">
+                                        <div class="col-sm-12">
+                                            <!-- Get this data Settings (mysettings.html) -->
+                                            <!-- Get this data Settings (mysettings.html) -->
+                                            <label class="control-label">Performance Management Period:</label>&nbsp;&nbsp; January 1, 2016 - December 31, 2016
+                                            <button type="button" class="btn btn-primary btn-xs" data-toggle="modal" data-target="#newevidence">Change period</button>
+                                        </div>
+                                    </div>
+                                    <a href="competency_dictionary_new.html" class="btn-primary btn-xs">New Competency</a></div>
                             </div>
                             <div class="tabs-left">
                                 <ul class="nav nav-tabs">
